# termical

./: .gitignore  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/termical/: __init__.py  ai_client.py  calendar_client.py  cli.py  config.py  database.py  models.py  sync.py
src/termical/commands/: setup.py  today.py
